# mathematics-coding-az

./: .gitignore  README.md  ROADMAP.md  SUMMARY.md  docker-compose.yml  final_integration_test.py  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  run_math_learning.py  test_execution_api.py  test_execution_direct.py  test_integration.py
config/: execution.yaml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.python
docs/: MATHEMATICAL_PREREQUISITES.md
examples/: demo_task_validator_simple.py  demo_usage.py  rsa_example.py  test_task_validator.py
src/: __init__.py
src/assessment/: __init__.py  adaptive.py  rubric.py  scoring.py
src/autonomous/: __init__.py  basic_learning_agent.py  knowledge_schema.py  pattern_discovery.py
src/challenges/: __init__.py
src/challenges/implementations/: __init__.py
src/challenges/implementations/number_theory/: __init__.py  (+3 more)
src/challenges/level1/: __init__.py  calculus.py  linear_algebra.py  number_theory.py
src/challenges/level2/: __init__.py  discrete_optimization.py  machine_learning.py  numerical_simulation.py  optimization_techniques.py
src/challenges/level3/: __init__.py  abstract_math.py  computational_geometry.py  cryptography.py  model_theory.py  signal_processing.py  topology.py
src/core/: __init__.py  challenge.py  curriculum.py  failure_analysis.py  sandbox.py  verification.py
src/execution/: safe_executor.py  security.py
src/frontend/: package.json
src/frontend/public/: index.html  manifest.json
src/frontend/src/: App.js  index.js
src/generation/: __init__.py  api.py  challenge_generator.py  task_manager.py
src/learning/curriculum/: __init__.py  math_curriculum.py  problem_generator.py
src/learning/models/: __init__.py  learning_agent.py
src/learning/training/: __init__.py  training_orchestrator.py
src/platform/: __init__.py  api.py  auth_routes.py  authentication.py  database.py  execution.py  execution_api.py  models.py  progress_routes.py  server.py
src/validation/: __init__.py  task_validator.py
tests/: conftest.py  manual_test.py  quick_test.py  test_challenges.py  test_execution.py  test_execution_api.py  test_integration.py  test_task_validator.py
tests/challenges/: test_number_theory.py
(+21 files in other folders)
