[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathematics-coding-az"
version = "0.1.0"
description = "Mathematics-Based Coding AbsoluteZero: A learning platform integrating mathematical reasoning with programming"
authors = [{name = "MathCoding AZ Team", email = "team@mathcodingaz.edu"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sympy>=1.9",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "pytest>=7.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "redis>=4.0.0",
    "cryptography>=3.4.0",
    "networkx>=2.8.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/mathcodingaz/platform"
Repository = "https://github.com/mathcodingaz/platform.git"
Documentation = "https://mathcodingaz.readthedocs.io"
"Bug Tracker" = "https://github.com/mathcodingaz/platform/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"